--- a/src/webapp/WEB-INF/pages/cars.html
+++ b/src/webapp/WEB-INF/pages/cars.html
@@ -6,10 +6,21 @@
     <title>It's cars page</title>
 </head>
 <body>
-<div>
-    <th:block th:each="msg : ${messages}">
-        <h1 th:text="${msg}"></h1>
-    </th:block>
-</div>
+
+
+<table border="1">
+    <thead>
+    <tr>
+        <th scope="col">Series</th>
+        <th scope="col">Model</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:block th:each="car : ${carsList}">
+        <td th:text="${car.getSeries()}"/>
+        <td th:text="${car.getModel()}"/>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
