--- a/src/webapp/WEB-INF/pages/users.html
+++ b/src/webapp/WEB-INF/pages/users.html
@@ -1,44 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
-
 <head>
     <meta charset="UTF-8">
-    <title>all users</title>
+    <title>ALL USERS</title>
 </head>
 <body>
-<h2>all users</h2>
-<div>
-    <table>
-        <tr>
-            <th>id</th>
-            <th>name</th>
-            <th>email</th>
-        </tr>
+<h2 align=center>ALL USERS</h2>
 
-        <tr th:each="user : ${users}">
-            <td th:text="${user.getId()}">id</td>
-            <td th:text="${user.getName()}">name</td>
-            <td th:text="${user.getEmail()}">email</td>
+<div th:switch="${users}">
 
-            <td>
-                <form th:action="@{users/edit/{id}(id=${user.id})}" th:object="${user}">
-                    <button type="submit" edit
-                    </button>
-                </form>
-            </td>
-            <td>
-                <form th:action="@{users/delete(id=${user.id})}" th:object="${user}">
-                    <input type="hidden" name="id" th:value="${user.id}">
-                    <button type="submit">delete</button>
-                </form>
-            </td>
-        </tr>
-    </table>
-    <form th:action="@{users/add}">
-        <button type="submit">add</button>
-    </form>
+    <h2 th:case="null">no users found</h2>
+    <div th:case="*">
+        <table border="2" bgcolor="#87ceeb" align=center>
+            <thead>
+            <tr>
+                <td>id</td>
+                <td>name</td>
+                <td>email</td>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="user: ${users}">
+                <td th:text="${user.id}"></td>
+                <td th:text="${user.name}"></td>
+                <td th:text="${user.email}"></td>
+                <td><a th:href="@{/users/edit/{id}(id=${user.id})}">Edit</a></td>
+                <td><a th:href="@{/delete/{id}(id=${user.id})}">Delete</a></td>
+                </td>
+
+            </tr>
+            </tbody>
+        </table>
+        <form action="/users/add" align="center">
+
+            <button type="submit" value="Update User">Add new User</button>
+        </form>
+    </div>
 </div>
-
 </body>
 </html>
+
